refact: Sonar Lint